<?xml version="1.0" encoding="utf-8"?><!-- Copyright 2020 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- 0dp dimensions are used to prevent this view from influencing the size of
         the parent view if it uses "wrap_content". It is expanded to occupy the
         entirety of the parent in code, after the parent's size has been
         determined. See: https://github.com/google/ExoPlayer/issues/8726.
    -->
    <View
        android:id="@id/exo_controls_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/exo_black_opacity_60" />

    <ImageButton
        android:id="@+id/exo_back"
        style="@style/ExoMediaButton.Back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/back_button_content_description"
        android:padding="@dimen/close_button_margin" />

    <FrameLayout
        android:id="@id/exo_bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/exo_styled_bottom_bar_height"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/exo_styled_bottom_bar_margin_top"
        android:background="@color/exo_bottom_bar_background"
        android:layoutDirection="ltr">

        <LinearLayout
            android:id="@id/exo_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:layoutDirection="ltr"
            android:paddingStart="@dimen/exo_styled_bottom_bar_time_padding"
            android:paddingLeft="@dimen/exo_styled_bottom_bar_time_padding"
            android:paddingEnd="@dimen/exo_styled_bottom_bar_time_padding"
            android:paddingRight="@dimen/exo_styled_bottom_bar_time_padding">

            <TextView
                android:id="@id/exo_position"
                style="@style/ExoStyledControls.TimeText.Position" />

            <TextView
                android:id="@+id/separator"
                style="@style/ExoStyledControls.TimeText.Separator" />

            <TextView
                android:id="@id/exo_duration"
                style="@style/ExoStyledControls.TimeText.Duration" />

        </LinearLayout>

        <LinearLayout
            android:id="@id/exo_basic_controls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layoutDirection="ltr">

            <ImageButton
                android:id="@id/exo_settings"
                style="@style/ExoStyledControls.Button.Bottom.Settings"
                android:contentDescription="@string/settings_button_content_description" />

            <ImageButton
                android:id="@+id/exo_volume"
                style="@style/ExoMediaButton.Volume"
                android:contentDescription="@string/volume_button_content_description" />

            <ImageButton
                android:id="@id/exo_cc"
                style="@style/ExoStyledControls.Button.Bottom.CC"
                android:contentDescription="@string/cc_button_content_description" />

            <ImageButton
                android:id="@+id/exo_pip"
                style="@style/ExoMediaButton.Featured.Pip"
                android:contentDescription="@string/pip_button_content_description" />

            <ImageButton
                android:id="@+id/exo_fullscreen"
                style="@style/ExoMediaButton.Featured.FullScreen"
                android:contentDescription="@string/fullscreen_button_content_description" />

            <ImageButton
                android:id="@+id/exo_share"
                style="@style/ExoMediaButton.Featured.Share"
                android:contentDescription="@string/share_button_content_description" />

            <ImageButton
                android:id="@id/exo_overflow_show"
                style="@style/ExoStyledControls.Button.Bottom.OverflowShow"
                android:contentDescription="@string/overflow_menu_button_content_description" />


        </LinearLayout>

        <HorizontalScrollView
            android:id="@id/exo_extra_controls_scroll_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:visibility="invisible">

            <LinearLayout
                android:id="@id/exo_extra_controls"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layoutDirection="ltr">

                <ImageButton
                    android:id="@id/exo_overflow_hide"
                    style="@style/ExoStyledControls.Button.Bottom.OverflowHide"
                    android:contentDescription="@string/overflow_menu_button_content_description" />

            </LinearLayout>

        </HorizontalScrollView>

    </FrameLayout>

    <View
        android:id="@id/exo_progress_placeholder"
        android:layout_width="match_parent"
        android:layout_height="@dimen/exo_styled_progress_layout_height"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/exo_styled_progress_margin_bottom" />

    <LinearLayout
        android:id="@id/exo_minimal_controls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="@dimen/exo_styled_minimal_controls_margin_bottom"
        android:gravity="center_vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layoutDirection="ltr"
        android:orientation="horizontal">

        <ImageButton
            android:id="@id/exo_minimal_fullscreen"
            style="@style/ExoStyledControls.Button.Bottom.FullScreen"
            android:contentDescription="@string/fullscreen_button_content_description" />

    </LinearLayout>

    <LinearLayout
        android:id="@id/exo_center_controls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:clipToPadding="false"
        android:layout_gravity="bottom"
        android:layout_above="@id/exo_bottom_bar"
        android:padding="@dimen/exo_styled_controls_padding">

        <ImageButton
            android:id="@id/exo_prev_button"
            style="@style/ExoStyledControls.Button.Center.Previous"
            android:contentDescription="@string/prev_button_content_description" />

        <include layout="@layout/exo_styled_player_control_rewind_button" />

        <ImageButton
            android:id="@id/exo_play_pause"
            style="@style/ExoStyledControls.Button.Center.PlayPause"
            android:contentDescription="@string/play_pause_button_content_description" />

        <include layout="@layout/exo_styled_player_control_ffwd_button" />

        <ImageButton
            android:id="@+id/exo_next_button"
            style="@style/ExoStyledControls.Button.Center.Next"
            android:contentDescription="@string/next_button_content_description" />

    </LinearLayout>

    <TextView
        android:id="@+id/styled_controller_title_tv"
        style="@style/VideoTitleTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_medium"
        android:layout_marginTop="@dimen/space_medium"
        android:shadowColor="#000000"
        android:shadowRadius="3"
        android:textColor="@color/app_title_color"
        android:textAlignment="viewStart"
        tools:text="Title of Video"
        android:layout_below="@id/exo_back"
        android:textSize="@dimen/text_size_large" />

</RelativeLayout>