<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/forgot_password_spinner"
            style="?android:attr/progressBarStyle"
            android:layout_width="0dp"
            android:visibility="gone"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/forgot_password"
            android:textColor="@color/black"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/message_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/enter_email"
            android:textColor="#595959"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <LinearLayout
            android:id="@+id/reset_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/outline_shape"
            android:orientation="horizontal"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/message_tv"
            app:layout_constraintTop_toBottomOf="@+id/message_tv">

            <TextView
                android:id="@+id/reset_email_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/reset_email_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:background="@android:color/transparent"
                android:hint="@string/email_address"
                android:textColor="@color/black"
                android:textColorHint="@color/sign_in_with_apple_button_gray" />
        </LinearLayout>

        <Button
            android:id="@+id/reset_email_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/blue_shape"
            android:text="@string/send_password"
            android:textAllCaps="false"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/message_tv"
            app:layout_constraintStart_toStartOf="@+id/message_tv"
            app:layout_constraintTop_toBottomOf="@+id/reset_email" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>